--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col twelve">
 					<div class="brand">
-						<a href="#top"><img src="img/logo.png"></a>
+						<a href="#top"><img src="img/Logo.png"></a>
 					</div>
 					<div class="menu">
 						<ul class="menu-bar">
