--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="icon" type="icon" href="img/Logo.ico">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+
+
+
+
 </head>
 <body id="top">
 	<header id="head">
@@ -39,9 +43,9 @@
 				<div class="col twelve">
 					<div class="banner-img">
 						<div class="banner-color">
-						<h3 class="animated slideInUp">Hello, I'm Jose Ederango Jr</h3>
-						<h1 class="animated slideInUp">Web Designer and  Developer</h1>
-						<a href="#about" class="animated slideInUp">know me more</a>
+						<h3 class="fadeInUp">Hello, I'm Jose Ederango Jr</h3>
+						<h1 class="fadeInUp">Web Designer and  Developer</h1>
+						<a href="#about" class="fadeInUp">know me more</a>
 						</div>
 					</div>
 					<div class="scrollTop"><a href="#top"><i class="fa fa-long-arrow-up"></i></a></div>
@@ -142,5 +146,8 @@
 		</div>
 	</footer>
 	<script src="js/script.js"></script>
+	<script src="js/scrollMagic.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+	<script src="js/onScroll.js"></script>
 </body>
 </html>
