--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/vendor.css">
+	<link rel="stylesheet" type="text/css" href="css/hover-min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/pace-theme-minimal.css">
 	<link rel="icon" type="icon" href="img/Logo.ico">
-	<script src="js/jquery-3.2.1.min.js"></script>
 
+	
+	<script src="js/jquery-3.2.1.min.js"></script>
 
 
 
 </head>
 <body id="top">
-	<header id="head">
+	<div class="content">
+		<header id="head">
 		<div class="head wrapper">
 			<div class="row">
 				<div class="col twelve">
@@ -27,7 +30,7 @@
 					<div class="menu">
 						<ul class="menu-bar">
 							<li class="menu-items"><i class="fa fa-bars"></i></li>
-							<li class="menu-items "><a href="#top" class="active">HOME</a></li>
+							<li class="menu-items active"><a href="#top">HOME</a></li>
 							<li class="menu-items"><a href="#about">ABOUT</a></li>
 							<li class="menu-items"><a href="#services">SERVICES</a></li>
 							<li class="menu-items"><a href="#contact">CONTACTS</a></li>
@@ -38,20 +41,24 @@
 		</div>
 	</header>
 	<div id="banner">
+	<div class="color-wrap">
 		<div class="banner wrapper">
 			<div class="row">
 				<div class="col twelve">
 					<div class="banner-img">
+					
 						<div class="banner-color">
 						<h3 class="fadeInUp">Hello, I'm Jose Ederango Jr</h3>
 						<h1 class="fadeInUp">Web Designer and  Developer</h1>
 						<a href="#about" class="fadeInUp">know me more</a>
 						</div>
 					</div>
-					<div class="scrollTop"><a href="#top"><i class="fa fa-long-arrow-up"></i></a></div>
+						
+					</div>
+					<div class="scrollTop"><a href="#top"><i class="fa fa-angle-double-up"></i></a></div>
 				</div>
 			</div>
-		</div>
+	</div>
 	</div>
 	<div id="about">
 		<div class="about wrapper">
@@ -107,7 +114,7 @@
 							<input type="email" name="email" class="emailInput" placeholder="Email">
 							<input type="text" name="subject" class="subjectInput" placeholder="Subject">
 							<textarea name="message" id="messMe" placeholder="Enter Message"></textarea>
-							<button type="submit">SEND MESSAGE</button>
+							<button type="submit" class="hvr-ripple-out">SEND MESSAGE</button>
 						</form>
 					</div>
 				</div>
@@ -124,10 +131,10 @@
 					</div>
 						<div class="social">
 						<ul class="social-links">
-							<li class="social-items"><a href="https://www.facebook.com/LotzkyOnBoard"><i class="fa fa-facebook"></i></a></li>
-							<li class="social-items"><a href="https://twitter.com/JoseCadelina"><i class="fa fa-twitter"></i></a></li>
-							<li class="social-items"><a href="https://plus.google.com/u/0/103282867018655716832"><i class="fa fa-google-plus"></i></a></li>
-							<li class="social-items"><a href="https://github.com/LotzkyOnBoard"><i class="fa fa-github"></i></a></li>
+							<li class="social-items"><a  class="hvr-pulse" href="https://www.facebook.com/LotzkyOnBoard"><i class="fa fa-facebook"></i></a></li>
+							<li class="social-items"><a  class="hvr-pulse" href="https://twitter.com/JoseCadelina"><i class="fa fa-twitter"></i></a></li>
+							<li class="social-items"><a  class="hvr-pulse" href="https://plus.google.com/u/0/103282867018655716832"><i class="fa fa-google-plus"></i></a></li>
+							<li class="social-items"><a class="hvr-pulse"  href="https://github.com/LotzkyOnBoard"><i class="fa fa-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -145,9 +152,21 @@
 			</div>
 		</div>
 	</footer>
+	</div>
+	<div class="loader">
+		<img src="img/logo.png" alt="LOAD">
+	</div>
+	
+	<script src="js/pace.js"></script>
+	<script type="text/javascript">
+		Pace.on("done", function()
+		{
+		  $('.content').fadeIn(1500);
+		  $('.loader').css('display', 'none');
+		});
+	</script>
 	<script src="js/script.js"></script>
 	<script src="js/scrollMagic.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 	<script src="js/onScroll.js"></script>
 </body>
 </html>
