--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	</footer>
 	</div>
 	<div class="loader">
-		<img src="img/logo.png" alt="LOAD">
+		<img src="/img/Logo.png" alt="LOAD">
 	</div>
 	
 	<script src="js/pace.js"></script>
